--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,143 @@
 aiosqlite==0.17.0
+alembic==1.8.1
 anyio==3.6.1
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 asgiref==3.5.2
+asttokens==2.0.8
+attrs==22.1.0
+Babel==2.10.3
+backcall==0.2.0
+beautifulsoup4==4.11.1
+bleach==5.0.1
 certifi==2022.6.15
+cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
+cloudpickle==2.2.0
+contourpy==1.0.5
+cycler==0.11.0
 databases==0.6.1
+databricks-cli==0.17.3
+debugpy==1.6.3
+decorator==5.1.1
+defusedxml==0.7.1
 dnspython==2.2.1
+docker==6.0.0
 email-validator==1.2.1
+entrypoints==0.4
+executing==1.1.0
 fastapi==0.82.0
+fastjsonschema==2.16.2
+Flask==2.2.2
+fonttools==4.37.4
+gitdb==4.0.9
+GitPython==3.1.29
 greenlet==1.1.3
+gunicorn==20.1.0
 h11==0.13.0
 httptools==0.4.0
 idna==3.3
+importlib-metadata==5.0.0
+ipykernel==6.16.0
+ipython==8.5.0
+ipython-genutils==0.2.0
+ipywidgets==8.0.2
 itsdangerous==2.1.2
+jedi==0.18.1
 Jinja2==3.1.2
+joblib==1.2.0
+json5==0.9.10
+jsonschema==4.16.0
+jupyter==1.0.0
+jupyter-console==6.4.4
+jupyter-core==4.11.1
+jupyter-server==1.21.0
+jupyter_client==7.3.5
+jupyterlab==3.5.0
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.3
+jupyterlab_server==2.16.1
+kiwisolver==1.4.4
+lab==7.1
+Mako==1.2.3
 MarkupSafe==2.1.1
+matplotlib==3.6.0
+matplotlib-inline==0.1.6
+mistune==2.0.4
+mlflow==1.30.0
+nbclassic==0.4.7
+nbclient==0.7.0
+nbconvert==7.2.1
+nbformat==5.6.1
+nest-asyncio==1.5.6
+notebook==6.4.12
+notebook_shim==0.2.0
 numpy==1.23.2
+oauthlib==3.2.2
 orjson==3.8.0
+packaging==21.3
 pandas==1.4.4
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.2.0
+prometheus-client==0.14.1
+prometheus-flask-exporter==0.20.3
+prompt-toolkit==3.0.31
+protobuf==4.21.9
+psutil==5.9.2
+psycopg2-binary==2.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycparser==2.21
 pydantic==1.10.2
+Pygments==2.13.0
+PyJWT==2.6.0
+pyparsing==3.0.9
+pyrsistent==0.18.1
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 python-multipart==0.0.5
 pytz==2022.2.1
 PyYAML==6.0
+pyzmq==24.0.1
+qtconsole==5.3.2
+QtPy==2.2.1
+querystring-parser==1.2.4
 requests==2.28.1
+scikit-learn==1.1.2
+scipy==1.9.1
+Send2Trash==1.8.0
+simplejson==3.17.6
 six==1.16.0
+sklearn==0.0
+smmap==5.0.0
 sniffio==1.3.0
+soupsieve==2.3.2.post1
 SQLAlchemy==1.4.40
+sqlparse==0.4.3
+stack-data==0.5.1
 starlette==0.19.1
+tabulate==0.9.0
+terminado==0.16.0
+threadpoolctl==3.1.0
+tinycss2==1.1.1
+tomli==2.0.1
+tornado==6.2
+traitlets==5.4.0
+txt2tags==3.7
 typing_extensions==4.3.0
 ujson==5.4.0
 urllib3==1.26.12
 uvicorn==0.17.6
 uvloop==0.16.0
 watchgod==0.8.2
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.4.1
 websockets==10.3
+Werkzeug==2.2.2
+widgetsnbextension==4.0.3
+zipp==3.10.0
